download agent and run as a systemd service
